--- a/style.css
+++ b/style.css
@@ -1,20 +1,7 @@
 
-.card {
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.table {
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-input {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    margin-bottom: 10px;
+.group {
+    width: 164.15px;
+    height: 38.37px;
+    top: 43px;
+    left: 1214px;
 }
